--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
-﻿async-timeout==5.0.1
-asyncpg==0.29.0
-attrs==25.3.0
-beautifulsoup4==4.12.3
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-h11==0.16.0
-idna==3.10
-outcome==1.3.0.post0
-packaging==25.0
-pdf2image==1.17.0
-pillow==10.3.0
-psutil==5.9.8
+async-timeout==4.0.3
+asyncpg==0.28.0
+attrs==23.1.0
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+h11==0.14.0
+idna==3.4
+outcome==1.2.0
+packaging==23.1
+pdf2image==1.16.3
+pillow==9.5.0
+psutil==5.9.5
 pyaes==1.6.1
-pycparser==2.22
+pycparser==2.21
 pypng==0.20220715.0
 PyQRCode==1.2.1
 Pyrogram==2.0.106
 PySocks==1.7.1
-python-dotenv==1.0.1
-pytz==2024.1
-requests==2.32.3
-selenium==4.21.0
-sniffio==1.3.1
+python-dotenv==1.0.0
+pytz==2023.3
+requests==2.31.0
+selenium==4.11.2
+sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 TgCrypto==1.2.5
-trio==0.30.0
-trio-websocket==0.12.2
-typing_extensions==4.13.2
-urllib3==2.4.0
-webdriver-manager==4.0.1
+trio==0.22.2
+trio-websocket==0.10.3
+typing_extensions==4.7.1
+urllib3==2.0.4
+webdriver-manager==4.0.0
 wsproto==1.2.0
