--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: kits-bot
     env: python
+    runtime: python39
     buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: python main_cloud_robust.py
     envVars:
