--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,10 @@ psycopg2-binary==2.9.9
 requests==2.31.0
 httpx==0.25.2
 
+# Web Scraping
+beautifulsoup4==4.12.2
+lxml==4.9.3
+
 # Supabase
 supabase==2.3.4
 postgrest==0.13.2
