--- a/requirements_railway_complete.txt
+++ b/requirements_railway_complete.txt
@@ -25,6 +25,7 @@ postgrest==0.13.2
 # Utilities
 python-dotenv==1.0.0
 pytz==2023.3
+psutil==5.9.6
 
 # Additional dependencies that might be needed
 urllib3==2.0.7
