--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,14 @@ lxml==4.9.3
 # QR Code Generation
 pyqrcode==1.2.1
 
+# Image Processing
+Pillow==10.0.1
+pdf2image==1.16.3
+
+# Web Automation
+selenium==4.15.0
+webdriver-manager==4.0.1
+
 # Utilities
 python-dotenv==1.0.0
 pytz==2023.3
@@ -25,3 +33,8 @@ psutil==5.9.6
 # Additional dependencies that might be needed
 urllib3==2.0.7
 certifi==2023.11.17
+
+# System dependencies for PDF processing
+# Note: These may need to be installed on the system level
+# poppler-utils (for pdf2image)
+# chromium-browser (for selenium)
