--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: iare-bot
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
+    startCommand: python main_render.py
     envVars:
       - key: BOT_TOKEN
         sync: false
